5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions/1822_1646.log
== TEST (2019-06-13 11:04:04) 
-- CODE:
from numpy import*

vet = array(eval(input("Saques:")))



x = 0

for i in range(size(vet)):
	if(vet[i]<=50):
		x = x + 1
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:05:49) 
-- CODE:
from numpy import*

vet = array(eval(input("Saques:")))

x = 0

for i in range(size(vet)):
	if(vet[i]<=50):
		x = x + 1
print(x)
a = 0
d = zeros(x, dtype=int)
for in range(size(vet)):
	if(vet[i]<=50):
		d[a] = i
		a = a + 1
print(d)
	
-- ERROR:
File "XXXX", line 13
    for in range(size(vet)):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:05:57) 
-- CODE:
from numpy import*

vet = array(eval(input("Saques:")))

x = 0

for i in range(size(vet)):
	if(vet[i]<=50):
		x = x + 1
print(x)
a = 0
d = zeros(x, dtype=int)
for i in range(size(vet)):
	if(vet[i]<=50):
		d[a] = i
		a = a + 1
print(d)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:06:05) 
-- CODE:
from numpy import*

vet = array(eval(input("Saques:")))

x = 0

for i in range(size(vet)):
	if(vet[i]<=50):
		x = x + 1
print(x)
a = 0
d = zeros(x, dtype=int)
for i in range(size(vet)):
	if(vet[i]<=50):
		d[a] = i
		a = a + 1
print(d)
	
-- EXECUTION TIME:
1.0739
-- TEST CASE 1:
---- input:
[50,250,120,1350,265,42]
---- correct output:
2
[0 5]
---- user output:
2
[0 5]
-- TEST CASE 2:
---- input:
[200,100,151,320,115]

---- correct output:
0
[]
---- user output:
0
[]
-- TEST CASE 3:
---- input:
[50,51,52,53,55,191]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
